# mir-project

./: .env.example  .gitignore  README.md  plan.md  proposal.md  pyproject.toml
data/logs/e2e/inference-d/KV90EW/lightning_logs/version_0/: hparams.yaml
data/logs/e2e/test/0ZE7HH/lightning_logs/version_0/: config.txt  hparams.yaml  metrics.csv
data/logs/e2e/test/2JB0ZX/lightning_logs/version_0/: config.txt  hparams.yaml  metrics.csv
data/logs/e2e/test/7P21AG/lightning_logs/version_0/: config.txt  hparams.yaml  metrics.csv
examples/: README.md
examples/mixture_00001/: metadata.json
notebooks/: babyslakh_vs_moises_comparison.ipynb  base_macaque_comparison.ipynb  reproduced_comparison_results.ipynb  three_model_comparison.ipynb
src/: compare_results.py
src/data/: __init__.py
src/data/macaque/: __init__.py  datamodule.py  dataset.py  query_builder.py  session_mixer.py
src/tools/: babyslakh_npyify.py  build_babyslakh_metadata.py  build_macaque_queries.py  build_macaque_sessions.py  macaque_audit.py
tests/: conftest.py  test_macaque_datamodule.py  test_macaque_dataset.py
