[project]
name = "mir-project"
version = "0.1.0"
description = "ML environment PyTorch CUDA 12.6 for the final MIR project"
requires-python = "==3.12.*"
dependencies = [
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "torchcodec==0.8.1",
    "accelerate>=0.26.0",
    "numpy>=2.3.5",
    "scikit-learn>=1.8.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "wandb>=0.25.0",
    "pandas>=3.0.1",
    "lightning>=2.6.1",
    "omegaconf>=2.3.0",
    "torch-audiomentations>=0.12.0",
    "hear21passt>=0.0.26",
    "fire>=0.7.1",
    "pytest>=9.0.2",
]


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.pytest.ini_options]
pythonpath = ["src"]